services/aemo-v6a/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aemo-v6a
  labels:
    name: aemo-v6a
    app: aemo-v6a
