services/aemo-v6a/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aemo-v6a-service
  namespace: aemo-v6a
  labels:
    app: aemo-v6a
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5001
    protocol: TCP
    name: http
  selector:
    app: aemo-v6a
